tests-integration/fixtures/checking/1772567040_derive_newtype_missing_given/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Identity :: forall (@a :: Type). (a :: Type) -> Identity (a :: Type)

Types
Identity :: Type -> Type

Derived
derive forall (t :: Type). Show (Identity (t :: Type))

Roles
Identity = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Show (t :: Type)
  --> 7:1..7:42
  |
7 | derive newtype instance Show (Identity a)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
